Added page swapping to change header

--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
         <!-- Header Bar -->
         <div data-role="header" id="myHeaderBar">
             <a id="sideMenuLink" href="#myPanel"><i id="sideMenuButton" class="fa fa-align-justify fa-2x"></i></a>
-            <h1 id="myHeader">Pinkerton Academy Radio</h1>  
+            <h1 id="myHeader">Home</h1>  
         </div>
     
         <!-- Main Page Content -->
